# linear-algebra-lab-2

./: .gitignore  CMakeLists.txt  bar.py  main.cpp  main.tex  plot.py  readme.md
Algebra/: danilevski_eigenvalues.h  eigenvalues.h  euclidean_norm.h  frobenius_form.h  gauss.h  gauss_back_substitution.h  lu_decompose.h  minimal_square_problem.h  polynomial.h  polynomial_roots.h  power_iteration_method.h  power_method.h  qr_algorithm.h  qr_decompose.h  qr_hessenberg.h  reflections_hessenberg.h  rotations.h
Matrix/: matrix.h
Matrix_old/: abstract_matrix.h  diagonal_box_matrix.h  matrix.h  mutable_matrix.h  transposed_matrix.h
Plot/: plot.cpp  plot.h  plot_line.cpp  plot_line.h
TimeMeasurer/: time_measurer.cpp  time_measurer.h
